Made competition table, navbar responsive. Fixed content overflow issue.

--- a/client/src/sass/custom.scss
+++ b/client/src/sass/custom.scss
@@ -95,6 +95,11 @@ $all-colors: map.merge(
   box-sizing: border-box;
 }
 
+html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 .cursor-pointer {
   cursor: pointer
 }
